typescript/checker/tests/conformance/es6/Symbols/symbolProperty58.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            94,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty58.ts:7:6
  |
7 |     [Symbol.foo]: 0
  |      ^^^^^^

